<resources>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="currency">Currency</string>
    <string name="Date">Date</string>
    <string name="dismiss">Dismiss</string>
    <string name="volume_units">Volume units</string>
    <string name="fuel">Fuel</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="price">Price</string>
    <string name="remove">Remove</string>
    <string name="select_vehicles">Select vehicles</string>
    <string name="update">Update</string>
    <string name="vehicleName">Vehicle name</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="volumeUnit_gallons_us">US Gallons</string>
    <string name="volumeUnit_gallons_uk">UK Gallons</string>
    <string name="volumeUnit_litres">Litres</string>
    <string name="toast_emptyName">Name must be filled in.</string>
    <string name="toast_emptyFields">There are some empty fields above.</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_fillUps">Fill Ups</string>
    <string name="title_mileage">Mileage</string>
    <string name="toast_nameNotUnique">Name must be unique.</string>
    <string name="title_settings">Settings</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_vehicleManufacturer">Vehicle manufacturer</string>
    <string name="noExpenseInTheDatabase">No expense available for this car. Add a new one by clicking the add button on the bottom right</string>
    <string name="noFillupInTheDatabase">No fill-up available for this car. Add a new one by clicking the add button on the bottom right</string>
    <string name="no_expense_created_yet">No expense created yet.</string>
    <string name="no_fillup_created_yet">No fill up created yet.</string>
    <string name="no_vehicle_created_yet">No vehicle created yet.</string>
    <string name="no_data_to_show">No data to show.</string>
    <string name="addVehicle">Create vehicle</string>
    <string name="addVehicle_nameNotUnique">Vehicle with this name already exists.</string>
    <string name="addVehicle_vehicle_picture">Select picture</string>
    <string name="addVehicle_takePhoto">Take photo</string>
    <string name="addVehicle_selectPhotoFromGallery">Select photo from gallery</string>
    <string name="addVehicle_Toast_successfullyCreated">Vehicle have been successfully created</string>
    <string name="addVehicle_success">Vehicle created</string>
    <string name="addVehicle_fail">Vehicle create failed</string>
    <string name="addVehicle_picture_add_success">Picture added</string>
    <string name="addVehicle_picture_add_fail">Cannot add picture %s</string>
    <string name="permission_image_not_granted">Permissions required for work with images not granted. Image will not be used.</string>
    <string name="editVehicle_toast_oldPhotoWasNotRemovedDueToError">Error: Old picture was not removed !!!</string>
    <string name="editVehicle_toast_photoWillBeRemoved">Photo of your Vehicle will be removed after submitting update.</string>
    <string name="delete_vehicle_dialog_title">Delete %1$s</string>
    <string name="delete_vehicle_dialog_message">Do you want to completely remove vehicle %1$s and all its data?</string>
    <string name="delete_vehicle_fail">Failed to remove vehicle %1$s</string>
    <string name="delete_vehicle_success">%1$s deleted successfully</string>
    <string name="delete_vehicle_photo">Deleted picture of this vehicle</string>
    <string name="editExpense_addExpense">Add expense</string>
    <string name="editExpense_info_hint">Information about expense</string>
    <string name="editExpense_updateExpense">Update expense</string>
    <string name="editExpense_toast_createdSuccessfully">Expense created successfully</string>
    <string name="editExpense_toast_updatedSuccessfully">Expense updated successfully</string>
    <string name="editExpense_toast_createFailed">Expense create failed</string>
    <string name="editExpense_toast_updateFailed">Expense update failed</string>
    <string name="remove_expense_dialog_title">Delete Expense</string>
    <string name="remove_expense_dialog_message">Do you want to remove this expense?</string>
    <string name="remove_expense_success">Expense removed</string>
    <string name="remove_expense_fail">Expense remove failed</string>
    <string name="carUpdate_delete_btn">Delete vehicle</string>
    <string name="carUpdate_manufacturer">Vehicle manufacturer</string>
    <string name="carUpdate_Toast_successfullyUpdated">Vehicle have been successfully updated</string>
    <string name="carUpdate_Toast_updateFail">Vehicle update failed</string>
    <string name="updateCarActivity_wrong_number_format">Wrong number format</string>
    <string name="updateCarActivity_Toast_carNoUpdate">No change</string>
    <string name="updateCarActivity_emptyFields">One or more fields are empty!</string>
    <string name="add_fillup_distance_mode_update_rejected">It is not possible to switch distance modes on edit</string>
    <string name="add_fillup_distance_overall">Overall distance</string>
    <string name="add_fillup_distanceFromLast">Distance from last fill up</string>
    <string name="add_fillup_distanceFromLast_short">From last</string>
    <string name="add_fillup_distanceTotal_short">Total</string>
    <string name="add_fillup_fail">Fill up create failed</string>
    <string name="add_fillup_fail_update">Fill up update failed</string>
    <string name="add_fillup_fuel_volume">Fuel volume</string>
    <string name="add_fillup_full_fillup">Full fill up</string>
    <string name="add_fillup_info">Note</string>
    <string name="add_fillup_price">Price</string>
    <string name="add_fillup_pricePerGallon">Price per gallon</string>
    <string name="add_fillup_pricePerGallon_short">Per gallon</string>
    <string name="add_fillup_pricePerLitre">Price per litre</string>
    <string name="add_fillup_pricePerLitre_short">Per litre</string>
    <string name="add_fillup_priceTotal">Total price</string>
    <string name="add_fillup_priceTotal_short">Total</string>
    <string name="add_fillup_success">Fill up created</string>
    <string name="add_fillup_success_update">Fill up updated</string>
    <string name="add_fillup_success_update_noChange">No change</string>
    <string name="add_fillup_title_create">Create fill up</string>
    <string name="add_fillup_title_update">Update fill up</string>
    <string name="remove_fillup_dialog_title">Delete Fill Up</string>
    <string name="remove_fillup_dialog_message">Do you want to remove this fill up?</string>
    <string name="remove_fillup_success">Fill up removed</string>
    <string name="remove_fillup_fail">Fill up remove failed</string>
    <string name="statistics_average_distance_per_day">Average daily driven distance</string>
    <string name="statistics_average_distance_per_week">Average weekly driven distance</string>
    <string name="statistics_average_distance_per_month">Average monthly driven distance</string>
    <string name="statistics_average_distance_per_year">Average yearly driven distance</string>
    <string name="statistics_average_expense_cost_per_week">Average expense costs per week</string>
    <string name="statistics_average_expense_cost_per_month">Average expense costs per month</string>
    <string name="statistics_average_expense_cost_per_year">Average expense costs per year</string>
    <string name="statistics_average_fuel_cost_per_week">Average fuel costs per week</string>
    <string name="statistics_average_fuel_cost_per_month">Average fuel costs per month</string>
    <string name="statistics_average_fuel_cost_per_year">Average fuel costs per year</string>
    <string name="statistics_average_number_of_expenses_per_week">Average expenses per week</string>
    <string name="statistics_average_number_of_expenses_per_month">Average expenses per month</string>
    <string name="statistics_average_number_of_expenses_per_year">Average expenses per year</string>
    <string name="statistics_average_number_of_fill_ups_per_week">Average fill ups per week</string>
    <string name="statistics_average_number_of_fill_ups_per_month">Average fill ups per month</string>
    <string name="statistics_average_number_of_fill_ups_per_year">Average fill ups per year</string>
    <string name="statistics_average_total_cost_per_week">Average costs per week</string>
    <string name="statistics_average_total_cost_per_month">Average costs per month</string>
    <string name="statistics_average_total_cost_per_year">Average costs per year</string>
    <string name="statistics_avg_fuel_volume_per_fill_up">Average fuel volume per fill up</string>
    <string name="statistics_avg_fuel_price_per_fill_up">Average fuel cost per fill up</string>
    <string name="statistics_costs_per_distance">Total costs per 100%s</string>
    <string name="statistics_costs_per_distance_fuel">Fuel costs per 100%s</string>
    <string name="statistics_costs_per_distance_expense">Expense costs per 100%s</string>
    <string name="statistics_distance_between_fill_ups_average">Average distance between fill ups</string>
    <string name="statistics_distance_between_fill_ups_lowest">Min distance between fill ups</string>
    <string name="statistics_distance_between_fill_ups_highest">Max distance between fill ups</string>
    <string name="statistics_fuel_consumption">Fuel consumption</string>
    <string name="statistics_fuel_unit_price">Fuel unit price</string>
    <string name="vehicle_list">Vehicle list</string>
    <string name="googleDrive_forceUpload">Force upload</string>
    <string name="googleDrive_removeAccount">Remove account</string>
    <string name="faq_long">Frequently Asked Questions</string>
    <string name="faq_01_question">Consumption is not computed</string>
    <string name="faq_01_answer">This application use full tank as a reference point, so your consumption will recompute each time when you fully fuel up. There is simple not other way how to do it.</string>
    <string name="faq_02_question">My currency is not listed</string>
    <string name="faq_02_answer">Well, this is very annoying, but so easy to solve. Simple contact us through \'About\' page and in next release we will be very proud to support your currency. Feel free to write us more info about conditions and default units used in your country (miles per gallon, litre per km, currency decimal places, per litre price, photo of gas station)</string>
    <string name="faq_03_question">May I use this app on more devices with Google Drive syncing?</string>
    <string name="faq_03_answer">This is not supported feature (for now). Main purpose of Google Drive is to backup your data (e.g. in case of losing your phone). When you first set up your account, application will ask you, if you want to import your old backup (if exists). Then all following backups are made one-way, e.g. from your phone to Google Drive. Using this app on several devices may cause that each app rewrites data of other app.</string>
    <string name="faq_04_question">I have chosen to import nothing and now I lost my backup.</string>
    <string name="faq_04_answer">Do not be afraid. Google Drive keeps history of your backup. You can find your previous backups when you log into Google Drive on your computer. Go to \'FuelUp_backup\' folder and you will see your backup file. Click on \'Manage versions\' and restore the last one, which have been uploaded before import (or simply choose one you want).</string>
    <string name="googleDrive">Drive</string>
    <string name="googleDrive_test_sync">Test sync</string>
    <string name="faq">FAQ</string>
</resources>