<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/faq_item_base_padding"
            android:paddingTop="@dimen/faq_item_base_big_padding"
            android:text="@string/faq"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/faq_question_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/faq_item_base_big_padding"
            android:text="@string/faq_long" />

        <sk.momosi.fuelup.view.FaqItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/faq_item_base_big_margin"
            android:padding="@dimen/faq_item_base_padding"
            app:answer="@string/faq_01_answer"
            app:question="@string/faq_01_question" />

        <sk.momosi.fuelup.view.FaqItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/faq_item_base_big_margin"
            android:padding="@dimen/faq_item_base_padding"
            app:answer="@string/faq_02_answer"
            app:question="@string/faq_02_question" />

        <sk.momosi.fuelup.view.FaqItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/faq_item_base_big_margin"
            android:padding="@dimen/faq_item_base_padding"
            app:answer="@string/faq_03_answer"
            app:question="@string/faq_03_question" />

        <sk.momosi.fuelup.view.FaqItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/faq_item_base_big_margin"
            android:padding="@dimen/faq_item_base_padding"
            app:answer="@string/faq_04_answer"
            app:question="@string/faq_04_question" />

    </LinearLayout>

</ScrollView>