<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/vehicle_list"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/vehicle_list" />
        <item
            android:id="@+id/google_drive"
            android:icon="@drawable/ic_google_drive"
            android:title="@string/googleDrive" />
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/faq" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>

</menu>
