<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sk.momosi.fuelup.screens.MainActivity">

    <item
        android:id="@+id/googleDrive_testSync"
        android:orderInCategory="1"
        android:title="@string/googleDrive_test_sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/googleDrive_forceUpload_item"
        android:orderInCategory="2"
        android:title="@string/googleDrive_forceUpload"
        app:showAsAction="never" />

    <item
        android:id="@+id/googleDrive_removeAccount_item"
        android:orderInCategory="3"
        android:title="@string/googleDrive_removeAccount"
        app:showAsAction="never" />

</menu>
