<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="sk.piskula.fuelup.screens.edit.AddFillUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_addfillup_distance_from_last_fillup_adding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = "6">

                <EditText
                    android:id="@+id/txt_addfillup_distance_from_last_fillup_adding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_fillup_distanceFromLast"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_addfillup_distance_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/edit_fillup_expense_unit_paddingTop"
                android:textAlignment="textStart"
                android:textSize="@dimen/edit_fillup_expense_unit_fontSize"/>

            <ToggleButton
                android:id="@+id/btn_switch_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:minWidth="120dp"
                android:textOff="@string/add_fillup_distanceFromLast_short"
                android:textOn="@string/add_fillup_distanceTotal_short" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_addfillup_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = "6">

                <EditText
                    android:id="@+id/txt_addfillup_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/add_fillup_pricePerLitre"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_addfillup_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/edit_fillup_expense_unit_paddingTop"
                android:textAlignment="textStart"
                android:textSize="@dimen/edit_fillup_expense_unit_fontSize" />

            <ToggleButton
                android:id="@+id/btn_switch_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textOff="@string/add_fillup_pricePerLitre_short"
                android:textOn="@string/add_fillup_priceTotal_short"
                android:minWidth="120dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = "6">

                <EditText
                    android:id="@+id/txt_addfillup_fuel_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/add_fillup_fuel_volume"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_addfillup_volumeUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/edit_fillup_expense_unit_paddingTop"
                android:textAlignment="textStart"
                android:textSize="@dimen/edit_fillup_expense_unit_fontSize" />

            <CheckBox
                android:id="@+id/checkBox_fullFillUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:minWidth="120dp"
                android:checked="true"
                android:text="@string/add_fillup_full_fillup" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_addfillup_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:freezesText="true"
                android:hint="@string/Date"
                android:inputType="date"
                android:onClick="onClickDatePicker"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_addfillup_information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_fillup_info"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_fillup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ConfirmButton"
            android:onClick="onClickAdd"
            android:text="@string/add" />
    </LinearLayout>

</ScrollView>