<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".screens.edit.AddVehicleActivity" >

    <LinearLayout
        android:id="@+id/addVehicle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_addVehicle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vehicleName"
                    android:layout_marginEnd="5dp"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:onClick="onClickPhoto"
                >

                <ImageView
                    android:id="@+id/img_addVehicle_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:src="@drawable/ic_insert_photo"
                    />

                <ImageView
                    android:id="@+id/img_addVehicle_removePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:visibility="gone"
                    android:padding="6dp"
                    android:src="@drawable/ic_close" />

            </RelativeLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_addVehicle_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_vehicleManufacturer"
                android:inputType="textCapWords"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/whole_spinner_margin_bottom">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">

                <EditText
                    android:id="@+id/txt_addVehicle_mileage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_mileage"
                    android:layout_marginEnd="5dp"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_addVehicle_mileage_distanceUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/whole_spinner_margin_bottom"
            android:layout_marginLeft="@dimen/whole_spinner_margin_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:id="@+id/spinner_currency"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/spinner_height">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/whole_spinner_margin_bottom"
            android:layout_marginLeft="@dimen/whole_spinner_margin_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:id="@+id/spinner_addVehicle_types"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/spinner_height">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/whole_spinner_margin_bottom"
            android:layout_marginLeft="@dimen/whole_spinner_margin_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_units"
                android:textColor="@color/colorAccent"
                android:paddingBottom="10dp"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_volume_unit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_litres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volumeUnit_litres"
                    android:textSize="@dimen/radio_btn_font_size"/>

                <RadioButton
                    android:id="@+id/radio_us_gallons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volumeUnit_gallons_us"
                    android:textSize="@dimen/radio_btn_font_size"/>

                <RadioButton
                    android:id="@+id/radio_uk_gallons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volumeUnit_gallons_uk"
                    android:textSize="@dimen/radio_btn_font_size"/>
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_addVehicle_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            style="@style/ConfirmButton"
            android:gravity="center"
            android:layout_marginTop="@dimen/btn_confirm_margin_top"
            android:text="@string/add"
            android:onClick="onClickAdd"
           />
    </LinearLayout>

</ScrollView>